# PocketArkClient

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
src/: api.rs  config.rs  constants.rs  host.rs  hosts.rs  main.rs  patch.rs  servers.rs  ui.rs  update.rs
src/resources/embed/: pocket_ark_hooks.asi
src/servers/: certs.rs  http.rs  main.rs  mod.rs  qos.rs  redirector.rs
src/ui/: iced.rs  mod.rs  native.rs
