[package]
name = "pocket-ark-client"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "Client application for the Pocket Relay server"
license = "MIT"
keywords = ["EA", "PocketArk", "MassEffectAndromeda"]
authors = ["Jacobtread <jacobtread@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
winres = "0.1"

[dependencies]
openssl-sys = "0.9"
openssl = "0.10"

reqwest = { version = "^0.11", features = ["json", "deflate", "gzip"] }
rustls-pemfile = "1.0.3"

tokio-native-tls = "0.3.1"
tokio-openssl = "0.6.3"

axum = { version = "0.6.18", features = ["tracing", "tower-log"] }
axum-server = { version = "0.5.1", features = ["tls-openssl"] }

hyper = { version = "^0.14", features = ["full"] }
tokio = { version = "^1", features = ["full"] }
tower = "^0.4"
tower-http = { version = "^0.4", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Native file picker dialog
native-dialog = "0.6.3"

thiserror = "1"
# Library for obtaining the local IP address of the device
local-ip-address = "0.5"

# Iced GUI framework variant
[dependencies.iced]
version = "0.9"
default-features = false
features = ["image", "glow", "tokio"]

# Native Windows GUI framework variant
[dependencies.native-windows-gui]
version = "1.0.13"
optional = true
