[package]
name = "pocket-ark-client"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "Client application for the Pocket Relay server"
license = "MIT"
keywords = ["EA", "PocketArk", "MassEffectAndromeda"]
authors = ["Jacobtread <jacobtread@gmail.com>"]

[build-dependencies]
winres = "0.1"

[dependencies]
pocket-ark-client-shared = { version = "0.1", path = "../pocket-ark-client-shared" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Native file picker dialog
native-dialog = "0.7.0"

thiserror = "1"

# Logging
log = "0.4"
env_logger = "0.10"

# Iced GUI framework variant
[dependencies.iced]
version = "0.10"
default-features = false
features = ["image", "tokio"]

[profile.release]
strip = true
lto = true
codegen-units = 1
